proxy-kubernetes/debug-k8s-manifests/00-namespace-debug.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: haproxy-debug-gw
  labels:
    name: haproxy-debug-gw
