proxy-kubernetes/debug-k8s-manifests/cloudflared-redis--bungeesemaphore.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloudflared-redis--bungeesemaphore
  labels:
    app: cloudflared-redis--bungeesemaphore
    appgroup: cloudflared
    env: debug
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cloudflared-redis--bungeesemaphore
      appgroup: cloudflared
      env: debug
  template:
    metadata:
      labels:
        app: cloudflared-redis--bungeesemaphore
        appgroup: cloudflared
        env: debug
    spec:
      containers:
      - name: cloudflared-redis--bungeesemaphore
        image: cloudflare/cloudflared:2021.12.1
        args:
          - access
          - tcp
          - --loglevel
          - debug
          - --hostname
          - redis--bungeesemaphore.tcp-debug-network.seichi.click
          - --url
          - 0.0.0.0:6379
---
apiVersion: v1
kind: Service
metadata:
  name: cloudflared-redis--bungeesemaphore
spec:
  selector:
    app: cloudflared-redis--bungeesemaphore
    appgroup: cloudflared
    env: debug
