proxy-kubernetes/debug-k8s-manifests/cloudflared-redis--redisbungee.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloudflared-redis--redisbungee
  labels:
    app: cloudflared-redis--redisbungee
    appgroup: cloudflared
    env: debug
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cloudflared-redis--redisbungee
      appgroup: cloudflared
      env: debug
  template:
    metadata:
      labels:
        app: cloudflared-redis--redisbungee
        appgroup: cloudflared
        env: debug
    spec:
      containers:
      - name: cloudflared-redis--redisbungee
        image: cloudflare/cloudflared:2021.12.1
        args:
          - access
          - tcp
          - --loglevel
          - debug
          - --hostname
          - redis--redisbungee.tcp-debug-network.seichi.click
          - --url
          - 0.0.0.0:6379
          - --metrics=0.0.0.0:3333
---
apiVersion: v1
kind: Service
metadata:
  name: cloudflared-redis--redisbungee
spec:
  selector:
    app: cloudflared-redis--redisbungee
    appgroup: cloudflared
    env: debug
